--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "npm": "6.13.7"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.0.0",
     "@material-ui/core": "^4.9.9",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
